# STAP

./: .gitignore  AUTHORS  README.txt  configure.ac
examples/: Nanog.wtmx  Nanog_Oct4.wtmx  Nanog_top_500.fa  Nanog_top_500.txt  paramModelInFile.txt  test.featureTrainMsgOutFile  test.out  test.paramModelOutFile  test.paramModelOutFile.2  test.trainPredictionOutFile  test.trainPredictionOutFile.2  work.sh
src/: BindingPredictor.cpp  BindingPredictor.h  Makefile  Makefile.am  SeqAnnotator.cpp  SeqAnnotator.h  Tools.cpp  Tools.h  featureCollection.cpp  seq2binding.cpp
